# ros_openvino

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: interactive_face.yaml  mask_rcnn.yaml  openpose.yaml  ros.yaml  yolov3.yaml
include/robot_vision_openvino/vino_interactive_face/: detector.hpp  face.hpp  ros_interface.hpp  visualizer.hpp
include/robot_vision_openvino/vino_maskrcnn/: maskrcnn_ros.hpp  vino_maskrcnn.hpp
include/robot_vision_openvino/vino_openpose/: human_pose_estimator.hpp  openpose_ros.hpp
include/robot_vision_openvino/vino_yolo/: vino_yolo.hpp  yolo_ros.hpp
launch/: interactive_face_ros.launch  interactive_face_ros_gdb.launch  maskrcnn_ros.launch  maskrcnn_ros_gdb.launch  openpose_ros.launch  openpose_ros_gdb.launch  yolo_ros.launch  yolo_ros_gdb.launch
src/: human_pose_estimate_main.cpp  interactive_face_recognition_main.cpp  object_detection_main.cpp  semantic_segmentation_main.cpp
src/vino_interactive_face/: detector.cpp  face.cpp  ros_interface.cpp  visualizer.cpp
src/vino_maskrcnn/: maskrcnn_ros.cpp  vino_maskrcnn.cpp
src/vino_openpose/: human_pose.cpp  human_pose_estimator.cpp  openpose_ros.cpp  peak.cpp  render_human_pose.cpp
src/vino_yolo/: vino_yolo.cpp  yolo_ros.cpp
